--- a/app/src/main/res/layout/tab_home_layout.xml
+++ b/app/src/main/res/layout/tab_home_layout.xml
@@ -5,75 +5,76 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
+
+    <android.support.v7.widget.Toolbar
+    android:id="@+id/car_toolbar"
+    android:layout_width="match_parent"
+    android:layout_height="35dp"
+    android:background="#f00"
+    android:title="美丽衣橱">
+
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ImageView
+    android:id="@+id/mili"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    android:layout_weight="2"
+    android:src="@drawable/delivery_titlebar_logo" />
+
+    <RelativeLayout
+    android:id="@+id/search_bar"
+    android:layout_width="0dp"
+    android:layout_height="35dp"
+    android:layout_toRightOf="@+id/mili"
+    android:layout_weight="5"
+    android:background="#D00104"
+    android:gravity="center_vertical">
+
+    <ImageView
+    android:id="@+id/search"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="5dp"
+    android:layout_marginTop="3dp"
+    android:src="@drawable/delivery_titlebar_searchsub" />
+
+    <TextView
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginTop="3dp"
+    android:layout_toRightOf="@+id/search"
+    android:text="在602411款商品中搜索" />
+    </RelativeLayout>
+
+    <ImageView
+    android:id="@+id/message_bar"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_alignParentRight="true"
+    android:layout_marginTop="5dp"
+    android:layout_toRightOf="@+id/search_bar"
+    android:layout_weight="1"
+    android:src="@drawable/delivery_titlebar_message" />
+    </LinearLayout>
+    </android.support.v7.widget.Toolbar>
+    </LinearLayout>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/ll_hor_tab_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/car_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:background="#f00"
-                android:title="美丽衣橱">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <ImageView
-                        android:id="@+id/mili"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:layout_weight="2"
-                        android:src="@drawable/delivery_titlebar_logo" />
-
-                    <RelativeLayout
-                        android:id="@+id/search_bar"
-                        android:layout_width="0dp"
-                        android:layout_height="35dp"
-                        android:layout_toRightOf="@+id/mili"
-                        android:layout_weight="5"
-                        android:background="#D00104"
-                        android:gravity="center_vertical">
-
-                        <ImageView
-                            android:id="@+id/search"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginTop="3dp"
-                            android:src="@drawable/delivery_titlebar_searchsub" />
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginTop="3dp"
-                            android:layout_toRightOf="@+id/search"
-                            android:text="在602411款商品中搜索" />
-                    </RelativeLayout>
-
-                    <ImageView
-                        android:id="@+id/message_bar"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginTop="5dp"
-                        android:layout_toRightOf="@+id/search_bar"
-                        android:layout_weight="1"
-                        android:src="@drawable/delivery_titlebar_message" />
-                </LinearLayout>
-            </android.support.v7.widget.Toolbar>
-        </LinearLayout>
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -103,15 +104,15 @@
         <LinearLayout
             android:id="@+id/ll_ver_tab_id"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="3dp"
+            android:layout_height="40dp"
+            android:layout_margin="3dp"
             android:background="@android:color/white"
             android:orientation="vertical"
             android:visibility="invisible">
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="match_parent">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -130,18 +131,6 @@
                     android:background="@android:color/white"
                     android:src="@mipmap/delivery_moretop_un" />
             </RelativeLayout>
-
-            <GridView
-                android:id="@+id/tb_gv_id"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:gravity="center"
-                android:horizontalSpacing="10dp"
-                android:numColumns="4"
-                android:verticalSpacing="5dp"></GridView>
-
-
         </LinearLayout>
 
 
@@ -151,6 +140,8 @@
         android:id="@+id/home_viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"></android.support.v4.view.ViewPager>
+        android:layout_weight="1">
+
+    </android.support.v4.view.ViewPager>
 
 </LinearLayout>
