--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,7 +47,8 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                >
          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="40dp"
@@ -76,7 +77,8 @@
                  android:layout_height="wrap_content"
                  android:hint="手机号"
                  android:textSize="15sp"
-                 android:inputType="textEmailAddress" />
+                 android:inputType="textEmailAddress"
+                 />
          </RelativeLayout>
             </android.support.design.widget.TextInputLayout>
 
