--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,17 +11,16 @@
         android:id="@+id/login_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:title="登录"
-        android:navigationIcon="@mipmap/yuike_button_xback_sp"
         android:background="#fff"
-       >
+        android:navigationIcon="@mipmap/yuike_button_xback_sp"
+        android:title="登录">
 
-            <TextView
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="登录"
-            android:textSize="18sp"
-            android:textColor="#7A7A7A"/>
+            android:textColor="#7A7A7A"
+            android:textSize="18sp" />
 
 
     </android.support.v7.widget.Toolbar>
@@ -48,72 +47,79 @@
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
-         <RelativeLayout
-             android:layout_width="match_parent"
-             android:layout_height="40dp"
-             android:background="@mipmap/alertview_custom_left_un"
-             android:gravity="center_vertical">
-             <ImageView
-                 android:id="@+id/login_user_iv"
-                 android:layout_width="wrap_content"
-                 android:layout_height="match_parent"
-                 android:paddingLeft="5dp"
-                 android:src="@mipmap/login_user_icon"/>
-             <ImageView
-                 android:id="@+id/login_stoke_line"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_marginLeft="10dp"
-                 android:layout_marginTop="10dp"
-                 android:layout_toRightOf="@+id/login_user_iv"
-                 android:src="@mipmap/login_stoke_line"/>
-             <AutoCompleteTextView
-                 android:layout_marginLeft="5dp"
-                 android:layout_toRightOf="@+id/login_stoke_line"
 
-                 android:id="@+id/email"
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:hint="手机号"
-                 android:textSize="15sp"
-                 android:inputType="textEmailAddress" />
-         </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@mipmap/alertview_custom_left_un"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:id="@+id/login_user_iv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingLeft="5dp"
+                        android:src="@mipmap/login_user_icon" />
+
+                    <ImageView
+                        android:id="@+id/login_stoke_line"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_toRightOf="@+id/login_user_iv"
+                        android:src="@mipmap/login_stoke_line" />
+
+                    <EditText
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toRightOf="@+id/login_stoke_line"
+                        android:hint="手机号"
+                        android:inputType="textEmailAddress"
+                        android:textSize="15sp" />
+                </RelativeLayout>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
-                android:paddingTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:background="@mipmap/alertview_custom_left_un"
-    android:gravity="center_vertical">
-    <ImageView
-        android:paddingLeft="5dp"
-        android:id="@+id/login_pass_iv"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:src="@mipmap/login_pass_icon"/>
-    <ImageView
-        android:id="@+id/pass_stoke_line"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@mipmap/login_stoke_line"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/login_pass_iv"/>
-    android:layout_toRightOf="@+id/login_pass_iv"/>
-    <EditText
-        android:layout_marginLeft="5dp"
-        android:layout_toRightOf="@+id/pass_stoke_line"
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="密码"
-        android:textSize="15sp"
-        android:inputType="textPassword" />
-</RelativeLayout>
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:background="@mipmap/alertview_custom_left_un"
+                    android:gravity="center_vertical">
+
+                    <ImageView
+                        android:id="@+id/login_pass_iv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:paddingLeft="5dp"
+                        android:src="@mipmap/login_pass_icon" />
+
+                    <ImageView
+                        android:id="@+id/pass_stoke_line"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_toRightOf="@+id/login_pass_iv"
+                        android:src="@mipmap/login_stoke_line" />
+                    android:layout_toRightOf="@+id/login_pass_iv"/>
+
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:layout_toRightOf="@+id/pass_stoke_line"
+                        android:hint="密码"
+                        android:inputType="textPassword"
+                        android:textSize="15sp" />
+                </RelativeLayout>
             </android.support.design.widget.TextInputLayout>
 
             <Button
@@ -122,9 +128,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="35dp"
                 android:layout_marginTop="140dp"
-                android:text="登录"
                 android:background="@mipmap/alertview_custom_right_un"
+                android:text="登录"
                 android:textStyle="bold" />
+
             <Button
                 android:id="@+id/email_new_user_button"
                 style="?android:textAppearanceSmall"
@@ -133,50 +140,59 @@
                 android:layout_marginTop="10dp"
                 android:text="新用户注册"
                 android:textColor="#ff0000"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:onClick="ToMyRegister"/>
+
             <Button
                 android:id="@+id/btn_share"
                 style="?android:textAppearanceSmall"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                android:text="一键分享"
                 android:textColor="#ff0000"
-                android:textStyle="bold"
-                android:text="一键分享" />
+                android:textStyle="bold" />
+
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_marginTop="30dp"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp">
+
                 <ImageView
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:src="@mipmap/login_dotted_line"/>
+                    android:layout_weight="1"
+                    android:src="@mipmap/login_dotted_line" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="第三方账号登录"/>
+                    android:text="第三方账号登录" />
+
                 <ImageView
                     android:layout_width="0dp"
-                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:src="@mipmap/login_dotted_line"/>
+                    android:layout_weight="1"
+                    android:src="@mipmap/login_dotted_line" />
             </LinearLayout>
+
             <ImageView
                 android:id="@+id/btn_wechat_login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:src="@mipmap/login_weixin_btn_un"/>
+                android:src="@mipmap/login_weixin_btn_un" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="10dp"
-                android:text="微信"/>
+                android:text="微信" />
+
             <Button
                 android:id="@+id/btn_sina_login"
                 android:layout_width="match_parent"
@@ -206,7 +222,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="注销（微信）" />
-
 
 
         </LinearLayout>
